--- a/poster_tn09.tex
+++ b/poster_tn09.tex
@@ -14,7 +14,7 @@
 %%%%% --------- Change here if you want ---------- %%%%%
 %% margin for the geometry package, must be changed before using the geometry package
 %% default value is 4cm
-% \setmargin{4}
+\setmargin{2.5}
 
 %% the space between the blocks
 %% default value is 2cm
@@ -110,11 +110,11 @@
 \graphicspath{{img/}} % Specifies the directory where pictures are stored
 
 
-\title{Mise en \oe{}uvre d'une plateforme d'intégration continue pour un logiciel spatial\\
-  \Large{TN09}
+\title{{\fontsize{72pt}{72pt}\selectfont Mise en \oe{}uvre d'une plateforme d'intégration continue pour un logiciel spatial}\\
+  {\fontsize{52pt}{52pt}\selectfont TN09}
 }
-\author{Guillaume \textsc{Jorandon}\\
-  Centre CEA de Paris-Saclay — Institut de recherche sur les lois fondamentales de l'univers\\
+\author{{\fontsize{30pt}{30pt}\selectfont Centre CEA de Paris-Saclay — Institut de recherche sur les lois fondamentales de l'univers}\\
+Guillaume \textsc{Jorandon}
 }
 
 
@@ -156,7 +156,7 @@
   %%%%%%%%%% ------------------------------------------ %%%%%%%%%%
   \blocknode%
   {Starting}%
-  {Start with the following document:
+	{
 
     \coloredbox{colorthree!50!}{
       \textbackslash documentclass\{a0poster\}\\
