--- a/poster_tn09.tex
+++ b/poster_tn09.tex
@@ -156,7 +156,7 @@ Guillaume \textsc{Jorandon}
   %%%%%%%%%% ------------------------------------------ %%%%%%%%%%
   \blocknode%
   {Starting}%
-	{
+  {{\fontsize{34pt}{34pt}\selectfont{}Blablablabla}
 
     \coloredbox{colorthree!50!}{
       \textbackslash documentclass\{a0poster\}\\
