--- a/fancytikzposter.sty
+++ b/fancytikzposter.sty
@@ -780,7 +780,7 @@
           {\LARGE\bfseries\textcolor{blocktitletextcolor}{#2}}\\
           
           \color{blocktextcolor}
-          #3
+				{\fontsize{40pt}{40pt}\selectfont{}#3}
         \end{minipage}};
     }
     \blockcontent
@@ -849,7 +849,7 @@
           \vspace{\y2}
           
           \color{blocktextcolor}
-          #3
+				{\fontsize{40pt}{40pt}\selectfont{}#3}
         \end{minipage}};
       
       %% the title of the block
@@ -908,7 +908,7 @@
           \nodepart{second} 
           \begin{minipage}{\x1}
             \color{blocktextcolor}
-            #3
+				{\fontsize{40pt}{40pt}\selectfont{}#3}
           \end{minipage}
         };
         
@@ -934,7 +934,7 @@
               {\LARGE\bfseries\textcolor{blocktitletextcolor}{#2}}\\
 
               \color{blocktextcolor}
-              #3
+				{\fontsize{40pt}{40pt}\selectfont{}#3}
             \end{minipage}};
 
         }{
@@ -954,7 +954,7 @@
             \nodepart{second} 
             \begin{minipage}{\x1}
               \color{blocktextcolor}
-              #3
+				{\fontsize{40pt}{40pt}\selectfont{}#3}
             \end{minipage}
           };
           
@@ -1159,7 +1159,7 @@
                  \textcolor{plainblocktitletextcolor}{\Large \bf #5} 
                }
                \color{plainblocktextcolor}
-               #3
+					 {\fontsize{34pt}{34pt}\selectfont{}#3}
              \end{minipage}
            };
          }
