--- a/poster_tn09.tex
+++ b/poster_tn09.tex
@@ -206,6 +206,28 @@ Guillaume \textsc{Jorandon}
 
   %%%%%%%%%% ------------------------------------------ %%%%%%%%%%
   \blocknode%
+  {Architecture globale}%
+  {
+		  \begin{itemize}
+				  \item Une approche concrète du génie informatique appliqué à un projet de recherche.
+				  \item Réutilisation possible et probable de la plateforme pour le développement des logiciels de contrôle au sol du satellite.
+				  \item Décollage prévu en 2021 depuis la Chine dans un lanceur Longue Marche 2C.
+		  \end{itemize}
+  }
+
+  %%%%%%%%%% ------------------------------------------ %%%%%%%%%%
+  \blocknode%
+  {Fonctionnalités}%
+  {
+		  \begin{itemize}
+				  \item Une approche concrète du génie informatique appliqué à un projet de recherche.
+				  \item Réutilisation possible et probable de la plateforme pour le développement des logiciels de contrôle au sol du satellite.
+				  \item Décollage prévu en 2021 depuis la Chine dans un lanceur Longue Marche 2C.
+		  \end{itemize}
+  }
+
+  %%%%%%%%%% ------------------------------------------ %%%%%%%%%%
+  \blocknode%
   {Conclusion}%
   {
 		  \begin{itemize}
